--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "check": "biome check"
+    "check": "biome check",
+    "test:once": "vitest run"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.13",
@@ -16,9 +17,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.2.2",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
+    "jsdom": "^27.0.0",
     "typescript": "~5.8.3",
-    "vite": "^7.1.2"
+    "vite": "^7.1.2",
+    "vitest": "^3.2.4"
   }
 }
